* Amend the fix to {bz: 2056} by amending wrappable titles with <h2 class="tableTitle wrap">.

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -175,6 +175,10 @@ div#contentContainer h2.tableTitle {
     width: 90%;
 }
 
+div#contentContainer h2.tableTitle.wrap {
+    white-space: normal;
+}
+
 div#controls div#st-editing-tools-edit {
     max-width: 80%;
     display: block;
